<resources>
    <string name="app_name">MarketFree</string>
    <string name="marketfreetitlepage">MarketFreeTitlePage</string>
    <string name="loginButton">login</string>
    <string name="loginText">Email</string>
    <string name="passwordText">Password</string>
    <string name="style">Style</string>
    <string name="samplepicture">samplePicture</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_user_main_page">UserMainPage</string>
    <string name="user_full_name_text_main">User Full Name</string>
    <string name="user_key_text_main">Insert Key Here</string>
    <string name="manage_subscriptions_buttonText">Add/Remove Subscriptions</string>
    <string name="manage_publishing_button_text">Add/Remove Publishing</string>
    <string name="manage_profile_button_text">Edit Profile</string>
    <string name="order_status_button_text">View/Edit Orders</string>
    <string name="title_activity_manage_subsciptions">Add/Remove Subscriptions</string>
    <string name="title_activity_manage_profile">ManageProfileActivity</string>
    <string name="title_activity_manage_publishing">Manage Publishing</string>
    <string name="title_activity_manage_order_status">ManageOrderStatusActivity</string>
    <string name="subscription_management_text_title">Subscription Management</string>
    <string name="add_subscription_button_text">Add Subscription</string>
    <string name="hint_text_ManageSubs_Activity">To remove a sub just long click on the one you want to remove and select delete</string>
    <string name="back_button_text">Back</string>
    <string name="manage_orders_text_title">Manage Orders</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="add_new_publishing_buttonText">Add new publishing</string>
    <string name="remove_publishing_ButtonText">Remove Publishing</string>
    <string name="Back">Button</string>
    <string name="mange_profile_text">Profile</string>
    <string name="first_name_text_field">First Name</string>
    <string name="last_name_textField">Last Name</string>
    <string name="banking_information_last_4">Banking Information Last 4</string>
    <string name="card_type">Card Type</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="update_banking">Update Banking</string>
    <string name="banking">Banking</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save">save</string>
    <string name="profileimage">ProfileImage</string>
    <string name="options">Options</string>
    <string name="manageorderslayout">manageOrdersLayout</string>
    <string name="numberOfCompletedOrders">0</string>
    <string name="numberOfActiveCompletedOrders">0</string>
    <string name="firstNameRegister">First</string>
    <string name="LastNameRegisterInput">Last</string>
    <string name="RegisterScreenCardViewText">Register</string>
    <string name="EmailInputRegister">Email</string>
    <string name="OrderStatus">Order Status is: </string>
    <string name="OrderStatusApproved">Approved</string>
    <string name="OrderStatusInProgress">Good</string>
    <string name="OrderStatusPending">Order Pending</string>
    <string name="OrderNumber">12345123523</string>
    <string name="OrderStatusReadyForPickup">Ready For Pickup</string>
    <string name="OrderStatusDisapproved">Disapproved</string>
    <string name="OrderFromName">Brandon</string>
    <string name="PhoneInputRegister">Phone</string>
    <string name="ConnectedImage">ImageForConnected</string>
    <string name="image_for_connected_people">Image for Connected People</string>
    <string name="clientToken">373985215969-rqo2s5144lhu0a1i7j2bsi5h8j6ulima.apps.googleusercontent.com</string>
    <string name="imagesfororders">ImagesForOrders</string>
    <string name="imagefororders">imageForOrders</string>
    <string name="imageview">imageView</string>
    <string name="NA">N/A</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderidplaceholder">OrderID :</string>
    <string name="producer_keyplaceholder">Producer Key:</string>
    <string name="customer_keyplaceholder">Customer Key:</string>
    <string name="product_idplaceholder">Product ID:</string>
    <string name="order_statusplaceholder">Order Status:</string>
    <string name="order_descriptionplaceholder">Order Description:</string>
    <string name="order_quantityplaceholder">Order Quantity:</string>
    <string name="date_orderedplaceholder">Date Ordered:</string>
    <string name="date_completedplaceholder">Date Completed:</string>
    <string name="date_canceledplaceholder">Date Canceled:</string>
    <string name="amount_paidplaceholder">Amount Paid:</string>
    <string name="order_detailsFragementTitle">Order Details</string>
    <string name="xbuttonName">X</string>
    <string name="CancelButtonForOrders">Cancel Order</string>
    <string name="click_the_picture_to_upload">Click the picture to upload</string>
    <string name="product_title_label">Product Title:</string>
    <string name="product_description_label">Product Description:</string>
    <string name="title_hint">Title</string>
    <string name="quantity_label">Quantity:</string>
    <string name="cost_label">Cost:</string>
    <string name="quantity_hint">0.0</string>
    <string name="cost_hint">0.0</string>
    <string name="description_text">Description</string>
    <string name="publish_new_product_button">Publish New Product</string>
    <string name="quantityHint">0</string>
    <string name="productimagebutton">productImageButton</string>
    <string name="productimages">productImages</string>
    <string name="publsihingfragonclickimageview">publsihingFragOnClickImageView</string>
    <string name="prodDateCreated">DateCreated:</string>
    <string name="edit_publishing">Edit Publishing</string>
    <string name="editPubQuantityLabel">Quantity:</string>
    <string name="manage_your_items">Manage Your Items</string>
    <string name="see_whats_out_there">See Whats Out There</string>
    <string name="mainAcitivty_seeWhatsNewTab">See Whats New</string>
    <string name="mainAcitivity_ManageYourThingsTab">Manage Your Things</string>
    <string name="new_orders_buttonText">New Orders</string>
    <string name="new_productsButtonText">Products</string>
    <string name="new_subscribersButtonText">New Subscribers</string>
    <string name="new_messagesButtonText">Messaging</string>
    <string name="client_ID">"373985215969-rqo2s5144lhu0a1i7j2bsi5h8j6ulima.apps.googleusercontent.com"</string>
    <string name="android_client_ID">"373985215969-m9eagqep1qt16s76ahstko6ln674kpt4.apps.googleusercontent.com"</string>
    <string name="CardImageView">CardImageView</string>
    <string name="sign_in_with_other_account">Sign In With Other Account</string>
    <string name="managesubrecyclerviewimage">manageSubRecyclerViewImage</string>
    <string name="managesubsrecyclerview">manageSubsREcyclerView</string>
    <string name="manageSubsInsertTextHint">Insert Key Here</string>
    <string name="managesubsmenucancelbutton">manageSubsMenuCancelButton</string>
    <string name="remove_subscription">Remove Subscription</string>
    <string name="view_products">View Products</string>
    <string name="publishedproductfororder">publishedProductForOrder</string>
    <string name="productPrice">Price:</string>
    <string name="order_button_text">Order</string>
    <string name="inquire_more_about_this_product_button_label">Inquire More About This Product</string>
    <string name="tap_to_create_hint">Tap to Create</string>
    <string name="send_button_text">Send</string>
    <string name="sendmessagefragmentimageview">sendMessageFragmentImageView</string>
    <string name="conversations_Label">Conversations</string>
    <string name="seewhatsnewimageviewrecylceritem">seeWhatsNewImageViewRecylcerItem</string>
    <string name="conversation_about_product_title">Conversation About Product Title</string>
    <string name="seeMessagesYourMessageText">TextView</string>
    <string name="seeMessagesTheirMessageText">TextView</string>
    <string name="seemessagesyourimageview">seeMessagesYourImageView</string>
    <string name="seemessagestheirimageview">seeMessagesTheirImageView</string>
    <string name="sendButtonText">Send</string>
    <string name="reply_hereHint">Reply Here</string>
    <string name="input_new_key_here">Input New Key Here</string>
    <string name="click_image_to_change">Click Image to Change</string>
    <string name="mom_is_traassshhhhh">MOm is traassshhhhh</string>
    <string name="orderstatusproductimage">orderStatusProductImage</string>
    <string name="accept_order">Accept Order</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="manage_orders_title">Orders</string>
    <string name="messagingLabel">Messaging</string>
    <string name="ordersLabel">Orders</string>
    <string name="key_resetLabel">Key Reset</string>
    <string name="subscriptionsLabel">Subscriptions</string>
    <string name="publishingLabel">Publishing</string>


</resources>
