<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMainPageActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/manageSubscriptionsButton"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="163dp"
            android:text="@string/manage_subscriptions_buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/managePublishingButton"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="385dp"
            android:text="@string/manage_publishing_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/manageOrderStatusButton"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="163dp"
            android:layout_marginEnd="44dp"
            android:text="@string/order_status_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/manageProfileButton"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="44dp"
            android:text="@string/manage_profile_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/manageOrdersTitleCard"
            android:layout_width="261dp"
            android:layout_height="117dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TitleofPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="53dp"
                android:text="@string/user_key_text_main"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:text="@string/user_full_name_text_main"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="261dp"
                android:layout_height="30dp"
                android:layout_marginTop="88dp"
                android:text="@string/options"
                android:textAlignment="center" />

        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>