<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagePublishingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/managePublishingCardView"
            android:layout_width="261dp"
            android:layout_height="117dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TitleofPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="53dp"
                android:text="@string/user_key_text_main"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:text="@string/user_full_name_text_main"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="261dp"
                android:layout_height="30dp"
                android:layout_marginTop="88dp"
                android:text="@string/title_activity_manage_publishing"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/managePublishingAddnewButton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="156dp"
            android:text="@string/add_new_publishing_buttonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/managePublishingRemovePublishing"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="382dp"
            android:text="@string/remove_publishing_ButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/managePublishingBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="625dp"
            android:text="@string/back_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>