<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productCreatePublishFragmentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="johnschroeders.marketfree.CreatePublishingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/productCreatePublishFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/productImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="129dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/productimagebutton"
            android:src="@drawable/woman"
            app:layout_constraintBottom_toTopOf="@+id/productImageButtonLabel"
            app:layout_constraintEnd_toStartOf="@+id/productCreatePubFragExitButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/productImageButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="184dp"
            android:text="@string/click_the_picture_to_upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/productTitleInput"
            android:layout_width="269dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/title_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productDescriptionInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productTitleLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/productTitleLabel"
            android:layout_width="70dp"
            android:layout_height="42dp"
            android:layout_marginTop="260dp"
            android:text="@string/product_title_label"
            app:layout_constraintEnd_toStartOf="@+id/productTitleInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/productquantityInput"
            android:layout_width="85dp"
            android:layout_height="44dp"
            android:layout_marginTop="523dp"
            android:layout_marginBottom="164dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/quantity_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/productquantityLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/productDescriptionLabel"
            android:layout_width="74dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="365dp"
            android:text="@string/product_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productCostLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="548dp"
            android:text="@string/cost_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productquantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            app:layout_constraintBottom_toTopOf="@+id/productCreateProductFragCreateButton"
            app:layout_constraintEnd_toStartOf="@+id/productquantityInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/productcostInput"
            app:layout_constraintTop_toBottomOf="@+id/productDescriptionInput" />

        <EditText
            android:id="@+id/productcostInput"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="527dp"
            android:layout_marginBottom="57dp"
            android:ems="10"
            android:hint="@string/cost_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productCreateProductFragCreateButton"
            app:layout_constraintEnd_toStartOf="@+id/productquantityLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/productCostLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/productDescriptionInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="322dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="38dp"
            android:ems="10"
            android:hint="@string/description_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:scrollHorizontally="false"
            app:layout_constraintBottom_toTopOf="@+id/productcostInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/productDescriptionLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/productCreateProductFragCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_new_product_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productquantityLabel" />

        <Button
            android:id="@+id/productCreatePubFragExitButton"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="337dp"
            android:layout_marginTop="20dp"
            android:text="@string/xbuttonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/productPublishingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="278dp"
            android:layout_height="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productCreateProductFragCreateButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
