<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/seeMessagesYourImageView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/seemessagesyourimageview"
        app:layout_constraintEnd_toStartOf="@+id/seeMessagesYourMessages"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/seeMessagesYourMessages"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/yellowbutton"
        android:gravity="center"
        android:scrollHorizontally="false"
        android:text="@string/seeMessagesYourMessageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seeMessagesYourImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seeMessagesTheirMessages"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bluebutton"
        android:gravity="center"
        android:scrollHorizontally="false"
        android:text="@string/seeMessagesTheirMessageText"
        app:layout_constraintEnd_toStartOf="@+id/seeMessagesTheirImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/seeMessagesTheirImageView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/seemessagestheirimageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seeMessagesTheirMessages"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

</androidx.constraintlayout.widget.ConstraintLayout>